--- a/gestaoEscolar/templates/gestaoEscolar/aluno/aluno_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/aluno/aluno_listagem.html
@@ -6,6 +6,41 @@
 {% block main %}
 
     <h2>Listagem de Alunos</h2> 
+
+
+
+    <form>
+        <fieldset>
+            <div>
+                <label for="id_matricula">Status da matrícula:</label>
+                <select name="matricula" id="id_matricula">
+                    {% for item in Filtro_Matricula %}
+                        {% if matricula == item.0 %}
+                            <option value="{{ item.0 }}" selected>{{ item.1 }}</option>
+                        {% else %}
+                            <option value="{{ item.0 }}" >{{ item.1 }}</option>
+                        {% endif %}
+                    {% endfor %}    
+                </select>
+            </div>
+
+            <div>
+                <label for="id_ativo">Status da conta:</label>
+                <select name="ativo" id="id_ativo">
+                    {% for item in Filtro_Status %}
+                        {% if status == item.0 %}
+                            <option value="{{ item.0 }}" selected>{{ item.1 }}</option>
+                        {% else %}
+                            <option value="{{ item.0 }}" >{{ item.1 }}</option>
+                        {% endif %}
+                    {% endfor %}    
+                </select>
+            </div>
+
+            <button type="submit">Pesquisar</button>
+        </fieldset>
+        
+    </form>
     
     <table>
         <thead>
