--- a/gestaoEscolar/templates/gestaoEscolar/professor/professor_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/professor/professor_listagem.html
@@ -6,6 +6,39 @@
 {% block main %}
 
     <h2>Listagem de Professores</h2> 
+
+    <form>
+        <fieldset>
+            <div>
+                <label for="id_titulo">Título:</label>
+                <select name="titulo" id="id_titulo">
+                    {% for item in Filtro_Titulos %}
+                        {% if titulo == item.0 %}
+                            <option value="{{ item.0 }}" selected>{{ item.1 }}</option>
+                        {% else %}
+                            <option value="{{ item.0 }}" >{{ item.1 }}</option>
+                        {% endif %}
+                    {% endfor %}    
+                </select>
+            </div>
+
+            <div>
+                <label for="id_ativo">Status:</label>
+                <select name="ativo" id="id_ativo">
+                    {% for item in Filtro_Status %}
+                        {% if status == item.0 %}
+                            <option value="{{ item.0 }}" selected>{{ item.1 }}</option>
+                        {% else %}
+                            <option value="{{ item.0 }}" >{{ item.1 }}</option>
+                        {% endif %}
+                    {% endfor %}    
+                </select>
+            </div>
+
+            <button type="submit">Pesquisar</button>
+        </fieldset>
+        
+    </form>
     
     <table>
         <thead>
