--- a/gestaoEscolar/templates/gestaoEscolar/avaliacao/avaliacao_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/avaliacao/avaliacao_listagem.html
@@ -6,6 +6,27 @@
 {% block main %}
 
     <h2>Listagem de avaliações</h2>
+
+
+    <form>
+        <fieldset>
+            <div>
+                <label for="id_leciona">Disciplina / Professor:</label>
+                <select name="leciona" id="id_leciona">
+                    {% for item in Filtro_Leciona %}
+                        {% if leciona == item.id %}
+                            <option value="{{ item.id }}" selected>{{ item.nome_editado }}</option>
+                        {% else %}
+                            <option value="{{ item.id }}" >{{ item.nome_editado }}</option>
+                        {% endif %}
+                    {% endfor %}    
+                </select>
+            </div>
+
+            <button type="submit">Pesquisar</button>
+        </fieldset>
+        
+    </form>
     
     <table id="Tabela">
         <thead>
