Implementando a rotina de esqueceu a senha e o envio de email para a recuperaçao

--- a/gestaoEscolar/templates/gestaoEscolar/autenticacao/login_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/autenticacao/login_form.html
@@ -21,7 +21,7 @@
 
         <button type="submit">Entrar</button>
         <a href="{% url 'diretor_novo' %}"> Cadastrar-se</a>
-        <a href="#"> Esqueceu a senha</a>
+        <a href="{% url 'esqueceu' %}"> Esqueceu a senha</a>
         <a href="#"> Voltar</a>
     </form>
     
